# PortfolioReporter

./: .gitignore  README.md  assets.csv  main_reporter.py  pyproject.toml
.github/workflows/: codeql.yml
portfolio_analyzer/: cache_utils.py  data_processing.py  report_components.py  report_generator.py  section_builders.py
templates/: report_template.html
