[project]
name = "portfolio-report-generator"
version = "0.1.0"
description = "Generates an HTML portfolio report."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastparquet>=2024.11.0",
  "jinja2>=3.1.6",
  "ofxparse>=0.21",
  "pandas>=2.2.3",
  "plotly>=6.1.1",
  "pyarrow>=20.0.0",
  "yfinance>=0.2.61",
]
